Sequential Gradle Tasks and Enhanced Logging (#8)
* Implement sequential Gradle task execution and enhanced logging.

- Modified JagrathaService to execute Gradle tasks independently and sequentially.
- Implemented fail-fast logic for quality checks.
- Updated log storage to use session-specific subfolders.
- Changed modified file log format to JSONL.
- Added API endpoints and MCP tools for log retrieval.
- Fixed path traversal vulnerability in log retrieval.
- Added ObjectMapper configuration with bean conflict avoidance.
- Updated tests to verify new functionality and structure.

Co-authored-by: arun-infenia <154401555+arun-infenia@users.noreply.github.com>

* Sequential Gradle Tasks, Enhanced Logging, and PMD Fixes.

- Modified JagrathaService to execute Gradle tasks independently and sequentially.
- Implemented fail-fast logic for quality checks.
- Updated log storage to use session-specific subfolders.
- Changed modified file log format to JSONL.
- Added API endpoints and MCP tools for log retrieval.
- Fixed Path Traversal vulnerability in log retrieval.
- Added ObjectMapper configuration with @ConditionalOnMissingBean.
- Fixed various PMD violations (Complexity, Coupling, Logging, Constructors).
- Updated tests and verified all pass.

Co-authored-by: arun-infenia <154401555+arun-infenia@users.noreply.github.com>

* Sequential Gradle tasks, enhanced logging, and strict code quality fixes.

- Modified JagrathaService to execute Gradle tasks independently and sequentially.
- Implemented fail-fast logic for quality checks.
- Updated log storage to use session-specific subfolders.
- Changed modified file log format to JSONL.
- Added API endpoints and MCP tools for log retrieval.
- Fixed Path Traversal vulnerability in log retrieval.
- Added ObjectMapper configuration with @ConditionalOnMissingBean.
- Fixed all Checkstyle violations (star imports).
- Fixed all PMD violations (Complexity, Coupling, Logging, Fully Qualified Names, Literal Appends).
- Verified all test